--- a/convert_model_to_tflite.ipynb
+++ b/convert_model_to_tflite.ipynb
@@ -1,48 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <b>Export Model</b>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\User\\AppData\\Local\\Temp\\tmpdtbm1qp_\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\ikmal\\AppData\\Local\\Temp\\tmpq4g07ez0\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\User\\AppData\\Local\\Temp\\tmpdtbm1qp_\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\ikmal\\AppData\\Local\\Temp\\tmpq4g07ez0\\assets\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved artifact at 'C:\\Users\\User\\AppData\\Local\\Temp\\tmpdtbm1qp_'. The following endpoints are available:\n",
+      "Saved artifact at 'C:\\Users\\ikmal\\AppData\\Local\\Temp\\tmpq4g07ez0'. The following endpoints are available:\n",
       "\n",
       "* Endpoint 'serve'\n",
       "  args_0 (POSITIONAL_ONLY): TensorSpec(shape=(None, 7), dtype=tf.float32, name='input_layer_5')\n",
       "Output Type:\n",
       "  TensorSpec(shape=(None, 1), dtype=tf.float32, name=None)\n",
       "Captures:\n",
-      "  1996280481744: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  1996280489232: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  1996280488848: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  1996280487696: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  1996280490384: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  1996280491344: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666820256: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666825184: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666892128: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666890368: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666997664: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2586666998544: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
       "Model TensorFlow Lite telah disimpan di: diabetes.tflite\n"
      ]
     }
@@ -51,11 +51,13 @@
     "import tensorflow as tf\n",
     "\n",
     "# Muat model yang telah dilatih\n",
-    "model = tf.keras.models.load_model('diabetes.h5')\n",
+    "model = tf.keras.models.load_model('diabetes.h5', compile=False)\n",
     "\n",
     "# Konversi model ke format TensorFlow Lite\n",
     "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
     "tflite_model = converter.convert()\n",
+    "interpreter = tf.lite.Interpreter(model_content=tflite_model)\n",
+    "interpreter.allocate_tensors()\n",
     "\n",
     "# Simpan model TFLite ke file\n",
     "tflite_model_name = 'diabetes.tflite'\n",
@@ -63,6 +65,35 @@
     "    f.write(tflite_model)\n",
     "\n",
     "print(f\"Model TensorFlow Lite telah disimpan di: {tflite_model_name}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <b>Export Scaler</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Load scaler\n",
+    "scaler = joblib.load('scaler.pkl')\n",
+    "\n",
+    "# Simpan parameter mean dan std\n",
+    "scaler_params = {\n",
+    "    'mean': scaler.mean_.tolist(),\n",
+    "    'scale': scaler.scale_.tolist()\n",
+    "}\n",
+    "\n",
+    "import json\n",
+    "with open('scaler.json', 'w') as f:\n",
+    "    json.dump(scaler_params, f)"
    ]
   }
  ],
@@ -82,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
