Cleaning Code: add folder export model and markdown for dataset source

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dataset: https://www.kaggle.com/datasets/717451f4573e9c3d8963e626808ade67a89fbd2ee660be008c1aba16b2a2345a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <b>Menyaipkan semua library yang dibutuhkan</b>"
    ]
   },
@@ -77,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +98,9 @@
     "        target (str): Nama kolom target (label).\n",
     "        labels (tuple): Label untuk setiap nilai target (default=(\"Diabetes\", \"Diabetes\")).\n",
     "        colors (tuple): Warna untuk setiap nilai target (default=(\"blue\", \"red\")).\n",
+    "\n",
+    "    Returns:\n",
+    "        None: Fungsi ini tidak mengembalikan nilai, tetapi menampilkan plot distribusi Kernel Density Estimation (KDE) untuk setiap kolom yang dianalisis.\n",
     "    \"\"\"\n",
     "    for column in columns:\n",
     "        plt.figure(figsize=(6, 3))\n",
@@ -141,11 +151,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_confusion_matrices(cm1, cm2, classes, titles=['Training', 'Testing']):\n",
+    "    \"\"\"\n",
+    "    Fungsi untuk memvisualisasikan dua confusion matrix untuk data pelatihan dan pengujian.\n",
+    "\n",
+    "    Parameters:\n",
+    "        cm1 (numpy): Confusion matrix untuk data pelatihan.\n",
+    "        cm2 (numpy): Confusion matrix untuk data pengujian.\n",
+    "        classes (list): Daftar nama kelas yang digunakan untuk menamai label pada matriks.\n",
+    "        titles (list): Daftar judul untuk kedua plot confusion matrix, default adalah ['Training', 'Testing'].\n",
+    "\n",
+    "    Returns:\n",
+    "        None: Fungsi ini tidak mengembalikan nilai, tetapi menampilkan dua grafik confusion matrix yang terpisah.\n",
+    "    \"\"\"\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(15, 6))\n",
     "\n",
     "    # Plot untuk confusion matrix pertama\n",
